--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,12 @@
   },
   "rules": {
     "linebreak-style": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "next"
+      }
+    ]
   }
 }
