Refactor global index, config index, and database

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,5 @@
-PORT=3000
-DATA_BASE_PROTOCOL=mongodb
-DATABASE_URL=localhost:27017/test
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-TOKEN_SECRET=
-TOKEN_EXPIRES=1h
+PORT=4000
 ACCESS_CONTROL_ALLOW_ORIGIN=*
+MONGO_DB_URI=
+TOKEN_EXPIRES=
+TOKEN_SECRET=
