--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.2",
+    "nodemailer-sendgrid": "^1.0.3",
     "strip-final-newline": "^2.0.0",
     "swagger-ui-express": "^4.3.0",
     "uuid": "^8.3.2",
