--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 PORT=4000
+DATABASE_PROTOCOL=mongodb
+DATABASE_URL=localhost:27018/gaming
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
 ACCESS_CONTROL_ALLOW_ORIGIN=*
-MONGO_DB_URI=
 TOKEN_EXPIRES=
 TOKEN_SECRET=
 SENDGRID_API_KEY=
